k8s-config/cassandra-h-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
spec:
  clusterIP: None  # Headless service to allow DNS-based communication between pods
  selector:
    app: cassandra
  ports:
  - name: cql
    port: 9042  # Default Cassandra port
    targetPort: 9042
