k8s-config/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-service
spec:
  type: ClusterIP
  ports:
    - port: 9042
      targetPort: 9042
  selector:
    app: cassandra
